--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Hi</<h1>
+      <hr>
+      <p>Hi everybody there it's me Ahsan. Yeah! your friend Ahsan; i've just created this website and i'm working on it and i am at the time wondering what to write about but i will write very soon!</p>
+      <p>Till then Bye!</p>
+  </body>
+</html>
