--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="master.css">
+    <title>Ahsan Saifi Blog</title>
   </head>
   <body>
     <h1>Hi</<h1>
