--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="css/master.css">
     <title>Ahsan Saifi Blog</title>
   </head>
   <body>
