--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/master.css">
-    <title>Ahsan Saifi Blog</title>
-  </head>
-  <body>
-    <h1>Hi</<h1>
-      <hr>
-      <p>Hi everybody there it's me Ahsan. Yeah! your friend Ahsan; i've just created this website and i'm working on it and i am at the time wondering what to write about but i will write very soon!</p>
-      <p>Till then Bye!</p>
-  </body>
+<html>
+<head>
+	<title>Ahsan's Blog - A Blog for everyone!</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+<body>
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<a href="#" class="navbar-brand" href="#">Ahsan's Blog</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+    		<span class="navbar-toggler-icon"></span>
+  		</button>
+		<div class="collapse navbar-collapse" id="nav-content">
+			<span class="navbar-text text-capitalize">A blog for Everyone!</span>
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item">
+				<a class="nav-link" href="#">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">About</a>
+			</li>
+		</ul>	
+		</div>
+
+	</nav>
+
+	
+	<div class="container">
+		<div class="jumbotron">
+		<h1 class="display-4">A Blog For Everyone</h1>
+		<p class="lead">
+			Well by everyone, I mean Everybody out there can read my blog.
+		</p>
+	</div>
+		<p>
+			Well I created the site and this landing page. But I still haven't got some content to show you right now. I will chnage this page as soon as I post something. Till the Bye!
+		</p>
+	</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 </html>
